z-index fix

--- a/db2/main/static/css/style.css
+++ b/db2/main/static/css/style.css
@@ -75,4 +75,12 @@ input[type="color"]:focus,
   margin-right: .1rem;
 }
 
+.header{
+  position:sticky;
+  position: -webkit-sticky;
+  top: 70px;
+  z-index: 98;
+  /*border-collapse: separate;*/
+  box-shadow: inset 1px -1px 1px black
 
+}
